[gd_scene load_steps=11 format=2]

[ext_resource path="res://Asset/Items/Scripts/InventoryController_V2_I.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogue_manager/example_balloon/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/dialogue_manager/example_balloon/font_normal.tres" type="DynamicFont" id=3]
[ext_resource path="res://Asset/Items/InventorySection_I.tscn" type="PackedScene" id=4]
[ext_resource path="res://Asset/made asset/Menu_UI/Select_Icon_UI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Asset/Items/MenuIcon_UI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Asset/made asset/Menu_UI/Resources/MenuEffect_hide_UI.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 4
extra_spacing_top = -1
extra_spacing_bottom = -2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 4
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 1, 1, 1 )

[node name="InventoryController_V2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="SectionBar" type="Panel" parent="."]
margin_left = 92.0
margin_top = 6.0
margin_right = 229.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 83, 9 )

[node name="SectionMenu" type="HBoxContainer" parent="SectionBar"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_top = 2.0
margin_right = 50.0
margin_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
custom_constants/separation = 23
alignment = 1

[node name="SelectIcon" parent="SectionBar/SectionMenu" instance=ExtResource( 5 )]
margin_left = 27.0
margin_right = 27.0
margin_bottom = 13.0
MenuEffect = [ ExtResource( 7 ) ]

[node name="SelectIcon2" parent="SectionBar/SectionMenu" instance=ExtResource( 5 )]
margin_left = 50.0
margin_right = 50.0
margin_bottom = 13.0
MenuEffect = [ ExtResource( 7 ) ]

[node name="SelectIcon3" parent="SectionBar/SectionMenu" instance=ExtResource( 5 )]
margin_left = 73.0
margin_right = 73.0
margin_bottom = 13.0
MenuEffect = [ ExtResource( 7 ) ]

[node name="ItemDetails" type="Panel" parent="."]
margin_top = 28.0
margin_right = 320.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( 186, 63 )

[node name="EquipItems" parent="ItemDetails" instance=ExtResource( 4 )]

[node name="ConsumeableItems" parent="ItemDetails" instance=ExtResource( 4 )]
visible = false

[node name="KeyItems" parent="ItemDetails" instance=ExtResource( 4 )]
visible = false

[node name="Exit Panel" type="Panel" parent="."]
margin_left = 264.0
margin_top = 8.0
margin_right = 303.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 186, 63 )

[node name="ItemInfo" type="Control" parent="."]
margin_left = -5.0
margin_right = 35.0
margin_bottom = 40.0

[node name="ItemPortrait" parent="ItemInfo" instance=ExtResource( 6 )]
margin_left = 250.0
margin_top = 37.0
margin_right = 282.0
margin_bottom = 69.0
rect_scale = Vector2( 1.463, 1.482 )
rect_pivot_offset = Vector2( 0, 0 )

[node name="ItemName" type="Label" parent="ItemInfo"]
margin_left = 241.0
margin_top = 89.0
margin_right = 306.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 3 )
text = "Item Name"
align = 1

[node name="ItemDescription" type="RichTextLabel" parent="ItemInfo"]
margin_left = 237.0
margin_top = 99.0
margin_right = 311.0
margin_bottom = 139.0
custom_fonts/normal_font = SubResource( 1 )
text = "Random Item Descriptions Random Item Descriptions Random Item Descriptions Random Item Descriptions Random Item Descriptions Random Item Descriptions Random Item Descriptions"

[node name="ItemAttribute" type="Label" parent="ItemInfo"]
margin_left = 238.0
margin_top = 130.0
margin_right = 309.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 3 )
text = "-10% Skill cooldown"
align = 2

[node name="Panel" type="Panel" parent="ItemInfo"]
margin_left = 238.0
margin_top = 87.0
margin_right = 310.0
margin_bottom = 127.0
rect_min_size = Vector2( 72, 0 )
rect_scale = Vector2( 1, 0.5 )
custom_styles/panel = SubResource( 2 )

[node name="Panel2" type="Panel" parent="ItemInfo"]
margin_left = 238.0
margin_top = 126.0
margin_right = 302.0
margin_bottom = 166.0
rect_min_size = Vector2( 72, 0 )
rect_scale = Vector2( 1, 0.5 )
custom_styles/panel = SubResource( 2 )

[editable path="ItemDetails/EquipItems"]
[editable path="ItemInfo/ItemPortrait"]
